# datamule-python

./: .gitignore
datamule/: pyproject.toml  setup.py
datamule/datamule/: helper.py  packageupdater.py
